--- a/config/chirpstack/network-server.toml
+++ b/config/chirpstack/network-server.toml
@@ -1,4 +1,4 @@
-# See https://www.chirpstack.io/network-server/install/config/ for a full
+## See https://www.chirpstack.io/network-server/install/config/ for a full
 # configuration example and documentation.
 #
 # This file is for the EU868 band. See the examples/ folder for more
@@ -11,37 +11,13 @@ dsn="postgres://chirpstack_ns:chirpstack_ns@postgresql/chirpstack_ns?sslmode=dis
 url="redis://redis:6379"
 
 [network_server]
-net_id="000000"
+net_id="010203"
 
 [network_server.band]
-name="EU868"
+name="US_902_928"
 
-[network_server.network_settings]
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867100000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867300000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867500000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867700000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867900000
-  min_dr=0
-  max_dr=5
+  [network_server.network_settings]
+  enabled_uplink_channels=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]
 
 [network_server.gateway.backend.mqtt]
 server="tcp://mosquitto:1883"
@@ -50,4 +26,5 @@ server="tcp://mosquitto:1883"
 server="http://chirpstack:8003"
 
 [geolocation_server]
-server="chirpstack-geolocation-server:8005"
+server="chirpstack-geolocation-server:8005" 
+
